Version 3.02 - 14 December 2007, by Pascal "Pixel" Rigaux

- fix "make test" on rpm 4.4.2.2
- fix rpm 4.5 support

Version 3.01 - 11 December 2007, by Pascal "Pixel" Rigaux

- add URPM::DB::verify()

Version 3.00 - 11 December 2007, by Pascal "Pixel" Rigaux

- replace ->import_needed_pubkeys and ->import_pubkey in favor of
  import_needed_pubkeys_from_file() and ->import_pubkey_file
  (! this breaks API !)
- drop $package->upgrade_files() (unused for a long time afaik)
- rpm.org HEAD support

Version 2.10 - 22 November 2007, by Pascal "Pixel" Rigaux

- much simpler --auto-select algorithm 
  (fixes #35718, ie auto-selecting with strict-arch)
  (!! DANGEROUS CHANGE !!)
- rpm 4.5 support (thanks to peroyvind) (#35323)

Version 2.09 - 8 November 2007, by Pascal "Pixel" Rigaux

- use a simple function to return simple string list from header 
  (fixes getting >4096 long rpm changelogs)
  (!! static buffer size limitation in callback_list_str_xpush() should be fixed !!)

Version 2.08 - 24 October 2007, by Pascal "Pixel" Rigaux

- fix build on rpm 4.4.2.2

Version 2.07 - 1 October 2007, by Pascal "Pixel" Rigaux

- prefer precompiled kmod packages corresponding to installed kernels
- don't resolve suggested virtual packages if already installed (#34376)

Version 2.06 - 28 September 2007, by Pascal "Pixel" Rigaux

- also handle promotion via obsolete for conflicts

Version 2.05 - 28 September 2007, by Pascal "Pixel" Rigaux

- package promotion must respect strict_arch
- enhance sorted graph by better taking into account conflicts from state->{rejected}
  (fixes "big transaction" in urpmi split-transactions--strict-require.t test)

Version 2.04 - 27 September 2007, by Pascal "Pixel" Rigaux

- handle promotion via obsolete, not only provides

Version 2.03 - 20 September 2007, by Pascal "Pixel" Rigaux

- fix bug doing "urpmi kernel-source"

Version 2.02 - 18 September 2007, by Pascal "Pixel" Rigaux

- prefer every kernel-<flavor>-devel-<version> packages for which